--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: "http://amirsemmo.de" # the base hostname & protocol for your site
 
 title: Interactive Graphics Engineer
 author: Amir Semmo
-portrait: "/img/daniel-limberger-aug-2014.jpg"
+portrait: "/img/amir-semmo-2012.jpg"
 
 flickr_user: "131006004@N06"
 flickr_api_key: adb4be93419edab991522b4fa92b7029
