--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ url: "http://amirsemmo.de" # the base hostname & protocol for your site
 
 title: Interactive Graphics Engineer
 author: Amir Semmo
+authortitle: Dr.
 portrait: "/img/amir-semmo-2016.jpg"
 
 flickr_user: "131006004@N06"
