--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: "http://amirsemmo.de" # the base hostname & protocol for your site
 
 title: Computer Graphics Engineer, Researcher and Technical Artist
 author: Amir Semmo
-authortitle: Dr.
+authortitle:
 portrait: "/img/amir-semmo-2018.jpg"
 
 flickr_user: "131006004@N06"
