--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://amirsemmo.de" # the base hostname & protocol for your site
 
 title: Computer Graphics Engineer, Researcher and Technical Artist
-author: Amir Semmo
+author: Dr. Amir Semmo
 authortitle:
 portrait: "/img/amir-semmo-2018b.jpg"
 
